# eps-FHIR-validator-lambda

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .trivyignore  Makefile  README.md  RELEASE.md  _config.yml  dev.html  index.html  int.html  package-lock.json  package.json  pom.xml  prod.html  pyproject.toml  qa.html  ref.html  release.config.js  sonar-project.properties  trivy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/actions/mark_jira_released/: action.yml
.github/actions/update_confluence_jira/: action.yml
.github/scripts/: call_mark_jira_released.sh  create_env_release_notes.sh  create_int_rc_release_notes.sh  delete_stacks.sh  get_current_dev_tag.sh  get_target_deployed_tag.sh  release_code.sh
.github/workflows/: ci.yml  delete_old_cloudformation_stacks.yml  pull_request.yml  quality_checks.yml  release.yml  sam_package_code.yml  sam_release_code.yml  sonar.yml
SAMtemplates/: lambda_resources.yaml  main_template.yaml
SAMtemplates/alarms/: main.yaml
_data/: dev-pr_latest.csv  dev-pr_releases.csv  dev_deployments.csv  dev_latest.csv  dev_releases.csv  int_deployments.csv  int_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  qa_releases.csv  recovery_deployments.csv  recovery_latest.csv  ref_deployments.csv  ref_latest.csv
dual/: pom.xml
latest/: pom.xml
legacy/: pom.xml
licenses/: licenses.xml
release_notes/: v1.1.50.md  v1.1.51.md  v1.1.52.md  v1.1.53.md  v1.1.54.md
scripts/: download_dependencies.py
src/main/resources/: manifest.json  nhs_digital.manifest.json  primerPayload.json  uk_core.manifest.json
(+111 files in other folders)
