[project]
python = "3.12.7"

[tool.poetry]
name = "eps-FHIR-validator-lambda"
version = "0.0.1-alpha"
description = "lambda for Validation Service FHIR R4 API Definitions"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-FHIR-validator-lambda"

[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pip-licenses = "^5.0.0"
pre-commit = "^4.1.0"
cfn-lint = "^1.22.7"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=1.6"]
build-backend = "poetry.masonry.api"
